--- a/random_forest_price_prediction.ipynb
+++ b/random_forest_price_prediction.ipynb
@@ -6,14 +6,13 @@
    "source": [
     "# Predicting Stock Movement with Random Forest\n",
     "\n",
-    "GitHub For this Paper can be found here: https://github.com/LuckysonKhaidem/StockMarketPedicition\n",
+    "This Paper can be found here: [Predicting the direction of stock market prices using random forest](https://arxiv.org/abs/1605.00003)\n",
     "\n",
-    "Random Forest is a machine learning ensemble method that is widely used because of it's flexibility, simplicity, and often quality results. In this tutorial, we will use the Random Forest algorithim to build a classification model that will help us predict whether a stock will close up or down based on range of technical indicators.\n",
+    "Random Forest is a machine learning ensemble method that is widely used because of it's flexibility, simplicity, and often quality results. we will use the Random Forest algorithim to build a classification model that will help us predict whether a stock will close up or down based on range of technical indicators to then turn into a web app.\n",
     "\n",
     "## What is Random Forest?\n",
-    "Now, up above I gave you a pretty simple definition of what Random Forest is. However, I think it's important to delve in more detail about it before we start coding our model. Now in short, Random Forests is a supervised machine learning algorithim that uses multiple decision trees in aggregate to help make more stable and accurate predictions.\n",
+    "In short, Random Forests is a supervised machine learning algorithim that uses multiple decision trees in aggregate to help us make more stable and accurate predictions.\n",
     "\n",
-    "After reading that you're probably going, \"Well you answered one question but left me with a few more.\" Let's go over some of those questions.\n",
     "\n",
     "### What are Decision Trees?\n",
     "Decision Trees are the fundamental building blocks of Random Forest. In essence, Decision Trees is flowlike chart structure where each node of the tree is used to test a particular attribute of the object. For example, imagine I have a person which will represent our object. We then test certain attributes of this person object. For example, one test would be whether they are male or female. The test will represent a \"Decision Node\" in our tree, and each of the possible outcomes \"Male\" or \"Female\" will represent a leaf node.The first \"Decision Node\" in our Decision Tree will be our \"Root Node\"\n",
@@ -29,20 +28,11 @@
     "### What is Ensemble Learning?\n",
     "An Ensemble Learning model is a model in which decisions are used from MULTIPLE MODELS to improve the overall performance of the model. The old idea that 2 minds are better than 1, prefectly summarizes ensemble learning. We use the results of multiple models to get a better idea of what the true answer is. Our Random Forest algorithim uses Bagging to help improve performance.\n",
     "\n",
-    "### Why use Random Forest?\n",
-    "Now, when you read the definition about decision trees you may be thinking, \"That sounds like a really simple and intuitive model. Why would we not just use decision trees?\". Well, it boils down to the following few points:\n",
-    "\n",
-    "1. Instability: Even small changes to the input data can have dramatic changes to the overall strucutre of the decision tree.\n",
-    "2. They are often relatively inaccurate. Many other predictors perform better with similar data.\n",
-    "3. For data including categorical variables with different number of levels, information gain in decision trees is biased in favor of those attributes with more levels.\n",
-    "4. Calculations can get very complex, particularly if many values are uncertain and/or if many outcomes are linked.\n",
-    "\n",
-    "These are some of the reasons it's preferable to use Random Forest because we will see that it helps overcome some of the weaknesses of Decision Trees. Now, as with anything, there is no perfect model. Just because something has weaknesses means it's worthless it just means we have to understand those weaknesses and keep eye out for them as we use them.\n",
     "\n",
     "### What is Supervised Learning?\n",
     "In machine learning, we have two categories of learning. Supervised learning and unsupervised learning. With unsupervised learning, we don't supervise the model and instead allow it to discover information on it's own. We do this by providing an \"UNLABELED\" data set that doesn't tell the model what category or value is the \"correct\" answer.\n",
     "\n",
-    "With supervised learning, we provide the model with a \"LABELED\" data set which tells the model what the \"correct\" value it should be. Random Forest, is an example of a supervised learning algorithim because we provide the model a labeled data set."
+    "With supervised learning, we provide the model with a \"LABELED\" data set which tells the model what the \"correct\" value it should be. Random Forest, is an example of a supervised learning algorithim because we provide the model a labeled data set.\n"
    ]
   },
   {
